semantic html laid out

--- a/index.html
+++ b/index.html
@@ -29,6 +29,33 @@
         </nav>
    </header>
    <section class="hero">
-       
+       <!-- tagline  -->
+       <div class="tagline">
+           <h2>
+               This guy devs
+           </h2>
+       </div>
    </section>
+   <!-- About section  -->
+   <section id="about-me">
+<h2>
+    About Me
+</h2>
+   </section>
+   <!-- projects section  -->
+<section id="projects">
+<h2>
+    Projects
+</h2>
+</section>
+<!-- contact section  -->
+<section id="contact">
+<h2>Contact</h2>
+</section>
+
+<!-- footer section  -->
+<footer>
+    <h2>Copyright 2021 Dan Evola</h2>
+</footer>
+
 </body>
