all semantics done, rough outline complete

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
    </header>
    <section class="hero">
        <!-- tagline  -->
-       <div class="tagline">
+       <div class="hero-tagline">
            <h2>
                This guy devs
            </h2>
@@ -41,16 +41,38 @@
 <h2>
     About Me
 </h2>
+<p>
+    I'm Dan Evola. I'm a technology leader, project management expert, and full stack software engineer. With over 10 years experience in technology, I've done everything from fix grandma's printer to create billion dollar software platforms. No idea is too big or bold, I can help your vision become reality.
+</p>
    </section>
    <!-- projects section  -->
 <section id="projects">
 <h2>
     Projects
 </h2>
+<div class="project-class">
+    <h3>Run Buddy</h3>
+</div>
+<div class="project-class">
+    <h3>Chivalry Barber</h3>
+</div>
+<div class="project-class">
+    <h3>Ronnie's Meats</h3>
+</div>
 </section>
 <!-- contact section  -->
 <section id="contact">
 <h2>Contact</h2>
+<div class="contact-info">
+    <h4>
+        Get in Touch
+    </h4>
+   <p>
+       Dan Evola </br>
+       E: dmevola@gmail.com </br>
+       P: (313) 618-6799 </br>
+   </p>
+</div>
 </section>
 
 <!-- footer section  -->
