css to stylize about me

--- a/index.html
+++ b/index.html
@@ -36,28 +36,45 @@
            </h2>
        </div>
    </section>
+
    <!-- About section  -->
+
    <section id="about-me">
-<h2>
+        <div class="about-me">
+            <div class="section-title">
+            <h2>
     About Me
-</h2>
-<p>
-    I'm Dan Evola. I'm a technology leader, project management expert, and full stack software engineer. With over 10 years experience in technology, I've done everything from fix grandma's printer to create billion dollar software platforms. No idea is too big or bold, I can help your vision become reality.
-</p>
+            </h2>
+            </div>
+                 <div class="bio">
+                 <p>
+             I'm Dan Evola. I'm a technology leader, project management expert, and full stack software engineer. With over 10 years experience in technology, I've done everything from fix grandma's printer to create billion dollar software platforms. No idea is too big or bold, I can help your vision become reality.
+                </p>
+                </div>
+        </div>
    </section>
+
+
+
    <!-- projects section  -->
 <section id="projects">
-<h2>
-    Projects
-</h2>
-<div class="project-class">
-    <h3>Run Buddy</h3>
-</div>
-<div class="project-class">
-    <h3>Chivalry Barber</h3>
-</div>
-<div class="project-class">
-    <h3>Ronnie's Meats</h3>
+    <div class="projects-group">
+        <div class="section-title">
+             <h2>
+                 Projects
+             </h2>
+        </div>
+    <div class="project-details">
+        <div class="project-class-big">
+            <h3>Run Buddy</h3>
+        </div>
+        <div class="project-class">
+            <h3>Chivalry Barber</h3>
+        </div>
+        <div class="project-class">
+            <h3>Ronnie's Meats</h3>
+        </div>
+    </div>
 </div>
 </section>
 <!-- contact section  -->
@@ -77,7 +94,7 @@
 
 <!-- footer section  -->
 <footer>
-    <h2>Copyright 2021 Dan Evola</h2>
+    <h3>Copyright 2021 Dan Evola</h3>
 </footer>
 
 </body>
