added links to images

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
     <div class="project-details">
         <div class="project-class-big">
             <h3>Run Buddy</h3>
+           <a href="https://dmevola.github.io/run-buddy"><img src="assets/images/run-buddy-bright.jpg" alt="Run Buddy Landing Page"/></a>
         </div>
         <div class="project-class">
             <h3>Chivalry Barber</h3>
@@ -77,6 +78,7 @@
     </div>
 </div>
 </section>
+
 <!-- contact section  -->
 <section id="contact">
 <h2>Contact</h2>
