all clickable links

--- a/index.html
+++ b/index.html
@@ -66,14 +66,16 @@
         </div>
     <div class="project-details">
         <div class="project-class-big">
-            <h3>Run Buddy</h3>
            <a href="https://dmevola.github.io/run-buddy"><img src="assets/images/run-buddy-bright.jpg" alt="Run Buddy Landing Page"/></a>
+           <div class="bottom-left">Run Buddy</div>
         </div>
-        <div class="project-class">
-            <h3>Chivalry Barber</h3>
+        <div class="project-class-small">
+            <a href="https://chivalrybarber.com"><img src="assets/images/chivalry-barber.jpg" alt="Chivalry Barbershop"/></a>
+            <div class="bottom-left">Chivalry Barber</div>
         </div>
-        <div class="project-class">
-            <h3>Ronnie's Meats</h3>
+        <div class="project-class-small">
+            <a href="https://ronniesmeats.com"><img src="assets/images/ronnies-meats.jpg" alt="Ronnies Meats Butcher Shop"/></a>
+        <div class="bottom-left">Ronnie's Meats</div>
         </div>
     </div>
 </div>
