hover states for images and nav

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
     <head>
     <meta charset="UTF-8" />
-    <title> Dan Evola Design</title>
+    <title> Dan Evola Development</title>
     <link rel="stylesheet" href="./assets/css/style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
@@ -32,7 +32,7 @@
        <!-- tagline  -->
        <div class="hero-tagline">
            <h2>
-               This guy devs
+               This guy <span>devs.</span>
            </h2>
        </div>
    </section>
@@ -48,7 +48,7 @@
             </div>
                  <div class="bio">
                  <p>
-             I'm Dan Evola. I'm a technology leader, project management expert, and full stack software engineer. With over 10 years experience in technology, I've done everything from fix grandma's printer to create billion dollar software platforms. No idea is too big or bold, I can help your vision become reality.
+             I'm Dan Evola. I'm a technology leader, project management expert, and full stack software engineer in training. With over 10 years experience in technology, I've done everything from fix grandma's printer to create enterprise software platforms. No idea is too big or bold, I can help your vision become reality.
                 </p>
                 </div>
         </div>
@@ -66,37 +66,42 @@
         </div>
     <div class="project-details">
         <div class="project-class-big">
-           <a href="https://dmevola.github.io/run-buddy"><img src="assets/images/run-buddy-bright.jpg" alt="Run Buddy Landing Page"/></a>
+           <a href="https://dmevola.github.io/run-buddy" target="blank"><img src="assets/images/run-buddy-bright.jpg" alt="Run Buddy Landing Page"/></a>
            <div class="bottom-left">Run Buddy</div>
         </div>
+        <div class="project-details-small">
         <div class="project-class-small">
-            <a href="https://chivalrybarber.com"><img src="assets/images/chivalry-barber.jpg" alt="Chivalry Barbershop"/></a>
+            <a href="https://chivalrybarber.com" target="blank"><img src="assets/images/chivalry-barber.jpg" alt="Chivalry Barbershop"/></a>
             <div class="bottom-left">Chivalry Barber</div>
         </div>
         <div class="project-class-small">
-            <a href="https://ronniesmeats.com"><img src="assets/images/ronnies-meats.jpg" alt="Ronnies Meats Butcher Shop"/></a>
+            <a href="https://ronniesmeats.com" target="blank"><img src="assets/images/ronnies-meats.jpg" alt="Ronnies Meats Butcher Shop"/></a>
         <div class="bottom-left">Ronnie's Meats</div>
         </div>
+    </div>
     </div>
 </div>
 </section>
 
 <!-- contact section  -->
-<section id="contact">
+<section id="contact" class="contact-info">
+    <div class="section-title">
 <h2>Contact</h2>
-<div class="contact-info">
+</div>
+<div class="contact-info-details">
     <h4>
         Get in Touch
     </h4>
    <p>
        Dan Evola </br>
-       E: dmevola@gmail.com </br>
-       P: (313) 618-6799 </br>
+       E: <a href="mailto:dmevola@gmail.com">dmevola@gmail.com</a></br>
+       P: <tel>(313) 618-6799</tel> </br>
    </p>
 </div>
 </section>
 
 <!-- footer section  -->
+
 <footer>
     <h3>Copyright 2021 Dan Evola</h3>
 </footer>
