--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- header begins  -->
     <header>
         <h1>
-            <a href="/">DAN EVOLA</a>
+            <a href="https://dmevola.github.io/portfolio">DAN EVOLA</a>
         </h1>
         <!-- nav menu items  -->
         <nav>
