--- a/index.html
+++ b/index.html
@@ -79,6 +79,10 @@
         <div class="bottom-left">Ronnie's Meats</div>
         </div>
     </div>
+    <div class ="project-class-big">
+            <a href="https://dmevola.github.io/fruitfacts" target="blank"><img src="assets/images/fruit-facts.png" alt="Fruit Facts"/></a>
+            <div class="bottom-left">Fruit Facts</div>
+    </div>
     </div>
 </div>
 </section>
