new project added

--- a/index.html
+++ b/index.html
@@ -80,6 +80,10 @@
         </div>
     </div>
     <div class ="project-class-big">
+        <a href="https://record-1400.herokuapp.com/" target="blank"><img src="assets/images/4-the-record.png" alt="4 The Record"/></a>
+        <div class="bottom-left">4 The Record</div>
+</div>
+    <div class ="project-class-big">
             <a href="https://dmevola.github.io/fruitfacts" target="blank"><img src="assets/images/fruit-facts.png" alt="Fruit Facts"/></a>
             <div class="bottom-left">Fruit Facts</div>
     </div>
